[package]
name = "shaders_processor"
version = "0.1.0"
authors = ["Valerii <valtimakov@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote        = "1.0"
syn          = { version = "1.0", features = ["full"] }
regex        = "1.5"
